[package]
name = "gametorch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
